--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <img src="IMG_3485.jpg" />
 <h3 id="contact">Contact</h3>
 
-<p>exposuresnorthern@gmail.com</p>
+        <p><a href="mailto:exposuresnorthern@gmail.com">exposuresnorthern@gmail.com</a></p>
 
 
       </section>
